# libnbtplusplus

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
include/io/: izlibstream.h  ozlibstream.h  stream_reader.h  stream_writer.h  zlib_streambuf.h
include/text/: json_formatter.h
test/: CMakeLists.txt
